k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uber-service
spec:
  selector:
    app: uber-api
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
