k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: 
    kubernetes.io/ingress.class: nginx
  name: nginx-ingress
  labels:
    name: nginx-ingress
   
spec:
  rules:
  - host: uber.tafaribeckford.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: uber-service
            port: 
              number: 80
  - host: grafana.tafaribeckford.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: monitoring-grafana
            port: 
              number: 80

  - host: prom.tafaribeckford.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: monitoring-kube-prometheus-prometheus
            port: 
              number: 9090
