k8s/logging-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: logging
  annotations: 
    kubernetes.io/ingress.class: nginx
  name: logging-ingress
  labels:
    name: logging-ingress
   
spec:
  rules:
  - host: logging.tafaribeckford.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kibana-kibana 
            port: 
              number: 5601
